# autobuilder-retired

./: AutoBuilder.cabal  AutoBuilder.hs  AutoBuilderScript.hs  BuildTarget.hs  Config.hs  DryRun.hs  Makefile  NewDist.hs  Params.hs  Setup.hs  Shell.hs  Target.hs  Test.hs  WebPage.hs  autobuilder  testdebootstrap.sh
BuildTarget/: Apt.hs  Bzr.hs  Darcs.hs  DebDir.hs  Hg.hs  Proc.hs  Quilt.hs  SourceDeb.hs  Svn.hs  Tla.hs  Uri.hs
Debian/: Config.hs  Deb.hs  GenBuildDeps.hs  Repo.hs  Report.hs  Shell.hs  URI.hs  VersionPolicy.hs
Debian/Apt/: Dependencies.hs  Index.hs
Debian/AutoBuilder/: BuildTarget.hs  Main.hs  OldParams.hs  ParamClass.hs  ParamRec.hs  Params.hs  Spec.hs  Target.hs  TargetType.hs  Tgt.hs  Version.hs
Debian/AutoBuilder/BuildTarget/: Apt.hs  Bzr.hs  Cd.hs  Common.hs  Darcs.hs  DebDir.hs  Debianize.hs  Dir.hs  Git.hs  Hackage.hs  Hg.hs  OldHackage.hs  Patch.hs  Proc.hs  Quilt.hs  SourceDeb.hs  Svn.hs  Temp.hs  Tla.hs  Twice.hs  Uri.hs
Debian/AutoBuilder/Types/: Buildable.hs  CacheRec.hs  Download.hs  Fingerprint.hs  PackageFlag.hs  Packages.hs  ParamRec.hs  RetrieveMethod.hs  RetrieveMethodOld.hs  Spec.hs
Debian/Control/: ByteString.hs  Common.hs  String.hs
Debian/Extra/: CIO.hs
Debian/Relation/: Common.hs  String.hs
Debian/Repo/: AptImage.hs  Cache.hs  Changes.hs  Dependencies.hs  IO.hs  Insert.hs  LocalRepository.hs  OSImage.hs  Package.hs  PackageIndex.hs  Release.hs  Repository.hs  Slice.hs  SourceTree.hs  SourcesList.hs  Types.hs
Debian/Util/: FakeChanges.hs
Example/: README  autobuilder.hs  build  common  debian  debian-etch  debian-lenny  debian-sarge  debian-sid  ghc610  local  relax  sources  ubuntu  ubuntu-feisty  ubuntu-gutsy  ubuntu-hardy  ubuntu-intrepid
System/: Chroot.hs
Test/: ParamRec.hs
Text/: Format.hs
debian/: autobuilder-web-client.postinst  changelog  control  hlibrary.mk  rules
