Name:           AutoBuilder
Version:        6.5
License:        BSD3
Author:         David Fox
Synopsis:       Build Debian source packages in suitable environments.
Description:
  The autobuilder program is now shipped as a haskell source file
  which uses the autobuilder library.  To configure it make a copy of
  @\/usr\/bin\/AutoBuilder.hs@ to somewhere such as @~\/AutoBuilder.hs@, edit
  the parameters in that file, and then use the command 
  @
    sudo runhaskell ~\/AutoBuilder.hs
  @
  Documentation for the parameters is found in the
  'ParamClass' type class in the "Debian.AutoBuilder.ParamClass"
  module, and for the different build target types in the description
  of "Debian.AutoBuilder.BuildTarget".
Cabal-Version:  >= 1.2
Build-type:     Simple

Library
  Build-Depends:  base, parsec, regex-compat, bytestring, containers, directory, process, old-time, old-locale,
                  network, unix, Unixutils, xhtml, mtl, time, MIME >= 1.1, Extra >= 1.40, filepath, magic, zlib,
                  bzlib, pretty, HaXml, regex-posix, template-haskell, Cabal, debian-repo >= 5.20.1, debian >= 3.58,
                  applicative-extras, regex-tdfa, happstack-util, tar
  GHC-Options: -O2 -threaded -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-type-defaults
  Exposed-modules:
    Debian.AutoBuilder.BuildTarget,
    Debian.AutoBuilder.BuildTarget.Apt,
    Debian.AutoBuilder.BuildTarget.Bzr,
    Debian.AutoBuilder.BuildTarget.Cd,
    Debian.AutoBuilder.BuildTarget.Common,
    Debian.AutoBuilder.BuildTarget.Darcs,
    Debian.AutoBuilder.BuildTarget.DebDir,
    Debian.AutoBuilder.BuildTarget.Debianize,
    Debian.AutoBuilder.BuildTarget.Dir,
    Debian.AutoBuilder.BuildTarget.Hackage,
    Debian.AutoBuilder.BuildTarget.Hg,
    Debian.AutoBuilder.BuildTarget.Proc,
    Debian.AutoBuilder.BuildTarget.Quilt,
    Debian.AutoBuilder.BuildTarget.SourceDeb,
    Debian.AutoBuilder.BuildTarget.Svn,
    Debian.AutoBuilder.BuildTarget.Tla,
    Debian.AutoBuilder.BuildTarget.Twice,
    Debian.AutoBuilder.BuildTarget.Uri,
    Debian.AutoBuilder.Main,
    Debian.AutoBuilder.Params,
    Debian.AutoBuilder.Spec,
    Debian.AutoBuilder.Target,
    Debian.AutoBuilder.Tgt,
    Debian.AutoBuilder.Version
