Name:           AutoBuilder
Version:        6.15
License:        BSD3
Author:         David Fox
Synopsis:       Build Debian source packages in suitable environments.
Description:
  The autobuilder program is now shipped as a haskell source file
  which uses the autobuilder library.  To configure it make a copy of
  @\/usr\/bin\/AutoBuilder.hs@ to somewhere such as @~\/AutoBuilder.hs@, edit
  the parameters in that file, and then use the command 
  @
    sudo runhaskell ~\/AutoBuilder.hs
  @
  Documentation for the parameters is found in the
  'ParamClass' type class in the "Debian.AutoBuilder.ParamClass"
  module, and for the different build target types in the description
  of "Debian.AutoBuilder.BuildTarget".
Cabal-Version:  >= 1.2
Build-type:     Simple

Library
  Build-Depends:
        applicative-extras >= 0.1.8
      , base
      , bytestring
      , bzlib
      , Cabal
      , containers
      , debian >= 3.60
      , debian-repo >= 5.20.1
      , directory
      , Extra
      , filepath
      , happstack-util
      , HaXml >= 1.22.5
      , magic
      , MIME >= 1.1
      , mtl
      , network
      , old-locale
      , old-time
      , parsec
      , pretty
      , process
      , pureMD5
      , regex-compat
      , regex-posix
      , regex-tdfa
      , tar
      , template-haskell
      , time
      , unix
      , Unixutils >= 1.45
      , xhtml
      , zlib
  GHC-Options: -O2 -threaded -Wall -Wwarn -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-type-defaults
  Exposed-modules:
    Debian.AutoBuilder.BuildTarget,
    Debian.AutoBuilder.BuildTarget.Apt,
    Debian.AutoBuilder.BuildTarget.Bzr,
    Debian.AutoBuilder.BuildTarget.Cd,
    Debian.AutoBuilder.BuildTarget.Common,
    Debian.AutoBuilder.BuildTarget.Darcs,
    Debian.AutoBuilder.BuildTarget.DebDir,
    Debian.AutoBuilder.BuildTarget.Debianize,
    Debian.AutoBuilder.BuildTarget.Dir,
    Debian.AutoBuilder.BuildTarget.Hg,
    Debian.AutoBuilder.BuildTarget.Proc,
    Debian.AutoBuilder.BuildTarget.Quilt,
    Debian.AutoBuilder.BuildTarget.SourceDeb,
    Debian.AutoBuilder.BuildTarget.Svn,
    Debian.AutoBuilder.BuildTarget.Tla,
    Debian.AutoBuilder.BuildTarget.Twice,
    Debian.AutoBuilder.BuildTarget.Uri,
    Debian.AutoBuilder.Main,
    Debian.AutoBuilder.Params,
    Debian.AutoBuilder.Spec,
    Debian.AutoBuilder.Target,
    Debian.AutoBuilder.TargetType,
    Debian.AutoBuilder.Tgt,
    Debian.AutoBuilder.Version
